// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing block for PickupStoreDisplay PickupStoreDisplay should be rendered correclty when order type is BOPIS 1`] = `
<div
  className=""
>
  <div
    className="pickup-store-details"
  >
    <div
      className="pickup-store-icon"
    >
      <Styled(Image)
        className="back-link-image"
        src="/static/images/marker-icon.png"
      />
    </div>
    <div
      className="pickup-store-content"
    >
      <Styled(BodyCopy)
        className={null}
        color="gray.900"
        component="p"
        dataLocator=""
        fontFamily="secondary"
        fontSize="fs14"
        fontWeight="extrabold"
        letterSpacing="normal"
        lineHeight="normal"
        textAlign="left"
      >
        Newport Center
      </Styled(BodyCopy)>
      <Styled(BodyCopy)
        className={null}
        color="gray.900"
        component="p"
        dataLocator=""
        fontFamily="secondary"
        fontSize="fs12"
        fontWeight="regular"
        letterSpacing="normal"
        lineHeight="normal"
        textAlign="left"
      >
        30 Mall Drive West
      </Styled(BodyCopy)>
      <div
        className="pickup-store-margin"
      >
        <Styled(BodyCopy)
          className={null}
          color="gray.900"
          component="p"
          dataLocator=""
          fontFamily="secondary"
          fontSize="fs14"
          fontWeight="extrabold"
          letterSpacing="normal"
          lineHeight="normal"
          textAlign="left"
        >
          Title 1 
          item
        </Styled(BodyCopy)>
        <Styled(BodyCopy)
          className={null}
          color="gray.900"
          component="p"
          dataLocator=""
          fontFamily="secondary"
          fontSize="fs12"
          fontWeight="regular"
          letterSpacing="normal"
          lineHeight="normal"
          textAlign="left"
        >
          Today, Sep 23
        </Styled(BodyCopy)>
      </div>
    </div>
  </div>
</div>
`;

exports[`testing block for PickupStoreDisplay PickupStoreDisplay should be rendered correclty when order type is BOSS 1`] = `
<div
  className=""
>
  <div
    className="pickup-store-details"
  >
    <div
      className="pickup-store-icon"
    >
      <Styled(Image)
        className="back-link-image"
        src="/static/images/marker-icon.png"
      />
    </div>
    <div
      className="pickup-store-content"
    >
      <Styled(BodyCopy)
        className={null}
        color="gray.900"
        component="p"
        dataLocator=""
        fontFamily="secondary"
        fontSize="fs14"
        fontWeight="extrabold"
        letterSpacing="normal"
        lineHeight="normal"
        textAlign="left"
      >
        Fulton Street
      </Styled(BodyCopy)>
      <Styled(BodyCopy)
        className={null}
        color="gray.900"
        component="p"
        dataLocator=""
        fontFamily="secondary"
        fontSize="fs12"
        fontWeight="regular"
        letterSpacing="normal"
        lineHeight="normal"
        textAlign="left"
      >
        471-485 Fulton Street
      </Styled(BodyCopy)>
      <div
        className="pickup-store-margin"
      >
        <Styled(BodyCopy)
          className={null}
          color="gray.900"
          component="p"
          dataLocator=""
          fontFamily="secondary"
          fontSize="fs14"
          fontWeight="extrabold"
          letterSpacing="normal"
          lineHeight="normal"
          textAlign="left"
        >
          Title 1 
          item
        </Styled(BodyCopy)>
        <Styled(BodyCopy)
          className={null}
          color="gray.900"
          component="p"
          dataLocator=""
          fontFamily="secondary"
          fontSize="fs12"
          fontWeight="regular"
          letterSpacing="normal"
          lineHeight="normal"
          textAlign="left"
        >
          Thu. Jan
    3 - Fri. Jan 4
        </Styled(BodyCopy)>
      </div>
    </div>
  </div>
</div>
`;
